tests/algorithms/x/Clojure/data_structures/binary_tree/lazy_segment_tree.error
run: exit status 1
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/algorithms/x/Clojure/data_structures/binary_tree/lazy_segment_tree.clj:104:1).
Cannot assign to non-mutable: segtree_to_string_segment_tree

Full report at:
/tmp/clojure-12029691639175472881.edn
